# note

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  settings.py
.github/workflows/: wheel.yml
note/: __init__.py  __main__.py  cli.py  core.py  exceptions.py  interfaces.py  models.py  services.py  web_app.py
note/templates/: base.html  create_note.html  index.html  note_detail.html
tests/: conftest.py  test_example.py  test_exceptions.py  test_managers.py
